saya mengubah satu line

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <body>
-            <p>hello word</p>
+            <p>shayna maylika</p>
         </body>
     </head>
 </html>
